# deepdi.sh

./: .env.example  .env.production.example  .gitignore  .mise.toml  .pre-commit-config.yaml  Caddyfile  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  compose.yaml  justfile  mprocs.yaml  tempo.yaml  test-recipe.json
backend/: Cargo.toml
backend/.sqlx/: query-766d1fcb4734d15797036112a33058150c9d8d74d52a83308661a65a78364b91.json
backend/migrations/: 20240405130737_initial.down.sql  20240405130737_initial.up.sql  20240505104419_add_recipes.down.sql  20240505104419_add_recipes.up.sql  20240930205457_timestamps-recipe.down.sql  20240930205457_timestamps-recipe.up.sql  20241008151922_diet_violations.down.sql  20241008151922_diet_violations.up.sql
backend/queries/: delete_ingredients_for_recipe.sql  get_ingredients_for_recipe.sql  get_recipe.sql
backend/queries/ingredients/: delete_ingredient.sql  get_all_ingredients.sql  get_all_ingredients_by_id.sql  get_ingredient_by_id.sql  insert_ingredient.sql
backend/queries/recipes/: delete_ingredient_from_recipe_by_id.sql  delete_recipe.sql  get_ingredients_for_recipe.sql  get_recipe.sql  get_recipes_using_ingredient.sql  insert_ingredient.sql  insert_recipe.sql  update_ingredient_in_recipe.sql  update_recipe_timestamps.sql
backend/src/: configuration.rs  lib.rs  main.rs  openapi.rs  telemetry.rs  test_utils.rs  tracing.rs
backend/src/api/: mod.rs
backend/src/api/errors/: api.rs  mod.rs
backend/src/api/extract/: json.rs  mod.rs
backend/src/api/routes/: all_ingredients.rs  create_ingredient.rs  get_ingredient_by_id.rs  mod.rs  update_ingredient.rs
backend/src/domain/: mod.rs
backend/src/domain/commands/: create_ingredient.rs  mod.rs
backend/src/domain/entities/: ingredient.rs  mod.rs
backend/src/domain/ingredients/: create_ingredient.rs  get_ingredient.rs  mod.rs
backend/src/domain/queries/: get_all_ingredients.rs  get_ingredient.rs  mod.rs
backend/src/domain/repositories/: ingredients.rs  mod.rs
backend/src/modules/: mod.rs
backend/src/modules/health/: mod.rs
backend/src/modules/ingredients/: mod.rs
backend/src/modules/recipes/: mod.rs
backend/src/modules/user/: mod.rs
backend/tests/: mod.rs  trial.rs
backend/tests/fixtures/: ingredient.rs  recipe.rs
backend/tests/ingredients/: delete.rs  get_all.rs  insert.rs  mod.rs
backend/tests/recipes/: create.rs  delete.rs  get_by_id.rs  mod.rs  update.rs
backend/tests/recipes/ingredients/: add.rs  delete.rs  mod.rs  update.rs
backend/tests/setup/: mod.rs
common/: Cargo.toml  index.ts  package.json  tsconfig.json
common/bindings/: BareRecipeDTO.ts  CreateIngredientDTO.ts  CreateNewUserDTO.ts  CreateRecipeDTO.ts  CreateRecipeIngredient.ts  ErrorMessage.ts  IngredientAmountDTO.ts  IngredientDTO.ts  IngredientUnitDTO.ts  IngredientWithAmount.ts  IngredientWithAmountDTO.ts  LoginUserDTO.ts  RecipeDTO.ts  ServingsTypeDTO.ts  UpdateIngredientDTO.ts  UpdateRecipeDTO.ts  UserDataDTO.ts
common/src/: error.rs  ingredients.rs  lib.rs  recipes.rs  user.rs
frontend/: .eslintrc.cjs  Cargo.toml  README.md  Trunk.toml  biome.json  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  thing.js  tsconfig.json  vite.config.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx  tailwind.css  telemetry.client.ts  telemetry.server.ts
frontend/app/components/: centered.tsx  editor.tsx  headings.tsx  topBar.tsx
frontend/app/components/button/: dashed.tsx  icon.tsx  index.tsx
frontend/app/icons/: carrot.tsx  cup.tsx  index.ts  info.tsx  scales.tsx  spoon.tsx
frontend/app/routes/: _index.tsx  recipe.$id.tsx
frontend/app/utils/: classes.tsx  convertSecondsToDuration.tsx  makeTitle.ts  types.ts
frontend/src/: App.tsx  lib.rs  main.rs  main.tsx  telemetry.ts
frontend/src-ts/: boop.ts  index.ts
frontend/src/components/: Link.tsx  UserInfo.tsx
frontend/src/layouts/: Base.tsx
frontend/src/modules/: mod.rs
frontend/src/pages/: Home.tsx  List.tsx  Recipe.tsx  Signup.tsx
frontend/src/routes/: mod.rs
frontend/src/stores/: login.ts
frontend/src/utils/: api.rs  mod.rs  tracing.rs
(+249 files in other folders)
