[package]
name = "backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
color-eyre = "0.6.2"
common = { version = "0.0.0", path = "../common" }
eyre = "0.6.12"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shrinkwraprs = "0.3.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = "0.16.1"
