[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
axum = { version = "0.7.5", features = ["multipart"] }
color-eyre = "0.6.3"
common = { version = "0.0.0", path = "../common" }
config = "0.14.0"
eyre = "0.6.12"
rayon = "1.10.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.197"
serde-aux = "4.5.0"
serde_json = "1.0.115"
shrinkwraprs = "0.3.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "tls-rustls", "uuid"] }
strum = { version = "0.26.1", features = ["derive", "strum_macros"] }
strum_macros = "0.26.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
