[package]
name = "common"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono"] }
