[package]
name = "frontend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
gloo-net = "0.5.0"
leptos = { version = "0.6.5", features = ["csr", "nightly", "tracing"] }
leptos_router = { version = "0.6.5", features = ["csr", "nightly"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.34", features = ["wasm-bindgen"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["time", "serde"] }
tracing-web = "0.1.3"
wasm-bindgen = { version = "0.2.91", features = ["serde", "serde_json"] }
wasm-bindgen-futures = "0.4.41"
web-sys = "0.3.68"
